--- a/Views/Home/ProductPage.cshtml
+++ b/Views/Home/ProductPage.cshtml
@@ -1,7 +1,7 @@
 ﻿@model liftoff_storefront.Models.Product
 
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Product Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Description)
         </dt>
         <dd class="col-sm-10">
-            @ViewBag.des
+            @ViewBag.desc
         </dd>
     </dl>
     <img src="@Model.ImageURL" />
