--- a/Views/Product/AddComment.cshtml
+++ b/Views/Product/AddComment.cshtml
@@ -1,4 +1,5 @@
-﻿@model liftoff_storefront.Models.UserComment
+﻿
+@model liftoff_storefront.ViewModels.AddCommentViewModel
 
 @{
     ViewData["Title"] = "AddComment";
@@ -11,20 +12,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddComment">
+        <form asp-action="AddComment" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <select asp-for="ProductId" class ="form-control" asp-items="ViewBag.ProductId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdentityUserId" class="control-label"></label>
-                <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
+                <input type="hidden" asp-for="ProductId" value="@Model.ProductId" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -34,7 +28,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="home" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
