--- a/Views/UserComments/Delete.cshtml
+++ b/Views/UserComments/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model liftoff_storefront.Models.Product
+﻿@model liftoff_storefront.Models.UserComment
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,27 +9,27 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>UserComment</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Content)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageURL)
+            @Html.DisplayNameFor(model => model.Product)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageURL)
-        </dd>
+            @Html.DisplayFor(model => model.Product.Id)
+        </dd class>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.IdentityUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+            @Html.DisplayFor(model => model.IdentityUser.Id)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
