Frontend updates to all html and Views to look better

--- a/Views/Product/ViewComments.cshtml
+++ b/Views/Product/ViewComments.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>ViewComments</h1>
-
+<h4>Comments</h4>
+<hr />
 <p>
     <a asp-action="AddComment" asp-route-id="@ViewBag.id">Create New</a>
 </p>
