--- a/Views/Product/GenerateProduct.cshtml
+++ b/Views/Product/GenerateProduct.cshtml
@@ -5,21 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>New</h1>
-
-<h4>Product</h4>
+<h4>Search</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="GenerateProduct" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Find Article" class="btn btn-primary" />
             </div>
         </form>
     </div>
