--- a/Views/Product/ProductPage.cshtml
+++ b/Views/Product/ProductPage.cshtml
@@ -5,35 +5,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>View</h1>
 
 <div>
-    <h4>Product</h4>
+    <h4>@Model.Name</h4>
     <hr />
     <img class="img-fluid mx-auto d-block" src="@Model.ImageURL" />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageURL)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImageURL)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @ViewBag.desc
-        </dd>
-    </dl>
+    <p>@ViewBag.desc</p>
 </div>
 <div>
-    <a href="@Model.Id/comments" class="btn-primary">View Comments</a>
+    <a href="@Model.Id/comments" class="btn btn-primary">View Comments</a>
 </div>
 <div>
     <a asp-controller="home" asp-action="Index">Back to List</a>
