--- a/Views/UserComments/Edit.cshtml
+++ b/Views/UserComments/Edit.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>UserComment</h4>
+<h4>Edit Comment</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,7 +13,6 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
@@ -27,7 +24,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="home" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
