updated API logic to generate article content.

--- a/Views/Product/GenerateProduct.cshtml
+++ b/Views/Product/GenerateProduct.cshtml
@@ -7,6 +7,7 @@
 
 <h4>Search</h4>
 <hr />
+<p>Type any phrase or sentence you wish, then please be patient after submission...</p>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="GenerateProduct" method="post">
